<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="bubtjobs.com.icare.Fragment.Add_diet"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <!-- relation -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_diet_tx"
                style="@style/inputTextView"
                />
            <Spinner
                android:id="@+id/diet_Com"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/deit_combo"
                />
        </LinearLayout>
        <!-- menu-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_tx"
                style="@style/inputTextView"
                />
            <EditText
                android:id="@+id/menu_Et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/menu_ht"
                style="@style/editText"
                />
        </LinearLayout>
        <!-- date -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date_tx"
                style="@style/inputTextView"
                />
            <Button
                android:id="@+id/date_bt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date_Bt"
                android:layout_margin="5dp"
                android:textAllCaps="false"
                />
        </LinearLayout>
        <!-- time -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/time_tx"
                style="@style/inputTextView"
                />
            <Button
                android:id="@+id/time_bt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/time_Bt"
                android:layout_margin="5dp"
                android:textAllCaps="false"
                />
        </LinearLayout>
        <!-- alarm type -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            >
            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <RadioButton
                    android:id="@+id/dailyAlarm_Rb"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/alarm_tx"
                    />
                <RadioButton
                    android:id="@+id/reminder_Rb"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/daily_alarm_tx"
                    />
            </RadioGroup>
        </LinearLayout>
        <!-- done -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="20dp"
            >
            <Button
                android:id="@+id/add_diet_bt"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/add_diet_Bt"
                android:textColor="#FFFFFF"
                android:background="@drawable/custom_button_a"
                android:layout_margin="10dp"
                android:textAllCaps="false"
                />
            <Button
                android:id="@+id/cancel_bt"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/cancel_Bt"
                android:layout_margin="10dp"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:background="@drawable/custom_button_a"
                />
        </LinearLayout>
    </LinearLayout>

</ScrollView>
