<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="bubtjobs.com.icare.Fragment.Add_Profile"
    android:orientation="vertical"
    android:background="#DBDBDB"
    >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <!-- name -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/linear_area_shap"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name_tx"
                    style="@style/inputTextView"
                    />
                <EditText
                    android:id="@+id/name_Et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name_ht"
                    style="@style/editText"
                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
                    />
            </LinearLayout>

            <!-- relation -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/linear_area_shap"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="20dp"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/relation_tx"
                    style="@style/inputTextView"
                    />
                <Spinner
                    android:id="@+id/relation_Com"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/releation_combo"
                    />
            </LinearLayout>

            <!-- age -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/linear_area_shap"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="20dp"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/age_tx"
                    style="@style/inputTextView"
                    />
                <Button
                    android:id="@+id/dob_bt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dob_Bt"
                    android:layout_margin="5dp"
                    android:textAllCaps="false"
                    />
            </LinearLayout>
            <!-- height -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/linear_area_shap"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="20dp"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/height_tx"
                    style="@style/inputTextView"
                    />
                <EditText
                    android:id="@+id/height_Et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/height_ht"
                    style="@style/editText"
                    android:inputType="numberDecimal"
                    />
            </LinearLayout>
            <!-- weight-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/linear_area_shap"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="20dp"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/weight_tx"
                    style="@style/inputTextView"
                    />
                <EditText
                    android:id="@+id/weight_Et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/height_ht"
                    style="@style/editText"
                    android:inputType="numberDecimal"
                    />
            </LinearLayout>
            <!--major disease-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/linear_area_shap"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="20dp"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/major_dis_tx"
                    style="@style/inputTextView"
                    />
                <EditText
                    android:id="@+id/majorDis_Et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/major_dis_ht"
                    style="@style/editText"
                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "

                    />
            </LinearLayout>
            <!-- blood group -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/linear_area_shap"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="20dp"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/blood_group_tx"
                    style="@style/inputTextView"
                    />
                <Spinner
                    android:id="@+id/bloodGroup_Com"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/bloodGroup_combo"
                    />
            </LinearLayout>

            <!-- button -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="20dp"
                >
               <Button
                   android:id="@+id/add_bt"
                   android:layout_width="0dp"
                   android:layout_weight="1"
                   android:layout_height="wrap_content"
                   android:text="@string/add_Bt"
                   android:textColor="#FFFFFF"
                   android:background="@drawable/custom_button_a"
                   android:layout_margin="10dp"
                   android:textAllCaps="false"
                />
                <Button
                    android:id="@+id/cancel_bt"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel_Bt"
                    android:layout_margin="10dp"
                    android:textAllCaps="false"
                    android:textColor="#FFFFFF"
                    android:background="@drawable/custom_button_a"
                    />
            </LinearLayout>
        </LinearLayout>
</ScrollView>
