<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DBDBDB"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".7"
        android:baselineAligned="false"
        >
        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chagePassword_tx"
        android:layout_gravity="bottom"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:textSize="30sp"
        />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3.5"
        android:orientation="vertical"
        >

        <!--<EditText-->
            <!--android:id="@+id/currentName_Et"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="Put Current User Name"-->
            <!--/>-->
        <!--<EditText-->
            <!--android:id="@+id/newName_Et"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="Put New User Name"-->
            <!--/>-->
        <EditText
            android:id="@+id/oldPassword_Et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/currentPassword_ht"
            android:inputType="textPassword"
            />
        <EditText
            android:id="@+id/newPasswod_Et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/newPassword_ht"
            android:inputType="textPassword"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            >
            <Button
                android:id="@+id/changPassword_bt"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/changePassword_Bt"
                android:textColor="#FFFFFF"
                android:background="@drawable/custom_button_a"
                android:layout_margin="10dp"
                android:textAllCaps="false"
                />
            <Button
                android:id="@+id/cancel_bt"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/cancel_Bt"
                android:layout_margin="10dp"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:background="@drawable/custom_button_a"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
