<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <!-- relation -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vaccination_name_tx"
                style="@style/inputTextView"
                />
            <Spinner
                android:id="@+id/vaccination_Com"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/vaccination_combo"
                />
        </LinearLayout>
        <!-- menu-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vaccination_details_tx"
                style="@style/inputTextView"
                />
            <EditText
                android:id="@+id/va_detatils_Et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="put vaccination details"
                style="@style/editText"
                />
        </LinearLayout>
        <!-- date -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Vaccination Date"
                style="@style/inputTextView"
                />
            <Button
                android:id="@+id/date_bt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date_Bt"
                android:layout_margin="5dp"
                android:textAllCaps="false"
                />
        </LinearLayout>
        <!-- time -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Vaccination Time"
                style="@style/inputTextView"
                />
            <Button
                android:id="@+id/time_bt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/time_Bt"
                android:layout_margin="5dp"
                android:textAllCaps="false"
                />
        </LinearLayout>
        <!-- alarm type -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            >
            <CheckBox
                android:id="@+id/va_reminder_Cb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="Reminder"
                android:textStyle="bold"
                android:textColor="#625e5e"
                android:textSize="20sp"
                />
        </LinearLayout>
        <!-- done -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="20dp"
            >
            <Button
                android:id="@+id/add_va_bt"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/add_vaccination_Bt"
                android:textColor="#FFFFFF"
                android:background="@drawable/custom_button_a"
                android:layout_margin="10dp"
                android:textAllCaps="false"
                />
            <Button
                android:id="@+id/cancel_bt"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/cancel_Bt"
                android:layout_margin="10dp"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:background="@drawable/custom_button_a"
                />
        </LinearLayout>
    </LinearLayout>

</ScrollView>
